# optical-networking-gym

./: .gitignore  PERFORMANCE_REDESIGN.md  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
benchmarks/: hot_path_benchmarks.py  run_hot_path_benchmarks.py  run_integrated_benchmarks.py
docs/: llm-judge-model-notes.md
examples/: INVENTORY.md  README.md  basic_first_fit.py  debug_profiling.py  env_test.py  load_sweep.py  static_first_fit_trace.py
examples/JOCN_Benchmark_2024/: README.md  graph_launch_power.py  graph_load.py  graph_margin.py  plot_results.py  plots.ipynb
examples/SBRT26/: osnr_margin_sweep.py
examples/analysis/: debug_profiling.py
examples/heuristics/: load_sweep.py  masked_first_fit.py  masked_random.py  runtime_first_fit.py  runtime_random.py  static_first_fit_trace.py
examples/legacy_benchmark/: osnr_margin_sweep.py  osnr_margin_sweep_analysis.ipynb
examples/llm/: 21-03-llm-judge-steps.csv  21-03-llm-judge-summary.csv  analyze_llm_judge_future_regret.py  build_judge_failure_pack.py  build_judge_heuristic_seed_baseline.py  finalize_multiagent_judge_cycle.py  multiple-judge.py  online_heuristic_judge.py  run_multiagent_judge_cycle.py
examples/quickstart/: basic_first_fit.py
examples/results/: benchmark_graph_load_nobel_eu_compare_20260318_225121.csv
examples/rl/: README.md  random_policy.py
src/optical_networking_gym_v2/: __init__.py  defaults.py  factory.py  scenarios.py
tests/action_mask/: test_action_mask.py
tests/allocation/: test_allocation.py
tests/benchmarks/: test_benchmarking.py  (+2 more)
(+129 files in other folders)
